FIX: z-index for react-datepicker

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,7 @@
 		@apply font-primary;
 	}
 }
+
+.react-datepicker-popper {
+    z-index: 100 !important;
+}
